@@ -67,7 +67,8 @@ $includes = array(
 	'0.8.7f' => '0_8_7e_to_0_8_7f.php',
 	'0.8.7g' => '0_8_7f_to_0_8_7g.php',
 	'0.8.7h' => '0_8_7g_to_0_8_7h.php',
-	'0.8.8'  => '0_8_7h_to_0_8_8.php',
+	'0.8.7i' => '0_8_7h_to_0_8_7i.php',
+	'0.8.8'  => '0_8_7i_to_0_8_8.php',
 );
 
 $old_cacti_version = db_fetch_cell('select cacti from version');
